# helplib

./: CMakeLists.txt
include/: BitManip.h  ConsoleEx.h  ExeFile.h  Handles.h  ImplementMember.h  StringManip.h
include/hacklib/: BitManip.h  ConsoleEx.h  CrashHandler.h  ExeFile.h  ForeignClass.h  Handles.h  Hooker.h  ImplementMember.h  Injector.h  Input.h  Logging.h  Main.h  Math.h  Memory.h  MessageBox.h  PageAllocator.h  Patch.h  PatternScanner.h  Process.h  Rng.h  StringManip.h  Timer.h
src/: ConsoleEx.cpp  ExeFile.cpp  Hooker.cpp  Hooker_VEH.cpp  Injector_UNIX.cpp  Injector_WIN32.cpp  Input.cpp  Logging.cpp  Memory_UNIX.cpp  PatternScanner.cpp  StringManip.cpp
src/gw2/: Agent.cpp  AttackTarget.cpp  Buff.cpp  CMakeLists.txt  Camera.cpp  Character.cpp  Compass.cpp  DataScan.cpp  EquipItem.cpp  Frame.cpp  Gadget.cpp  GameData.cpp  GameData.h  General.cpp  Gw2Hook.cpp  Gw2Hook.h  Item.cpp  Memory.cpp  Player.cpp  RefreshData.cpp  ResourceNode.cpp  SampleApp.cpp  enums.h  gw2lib.h  main.cpp  main.h  offsets.h  stub.cpp
